# yogeshsajanikar.github.io

./: .gitignore  about.html  about.rst  archive.html  contact.html  contact.markdown  index.html  index.org  musings.cabal
det/: det.html  det.org  ex.hs
posts/: 2017-04-23-dijkstra.html  2017-04-23-dijkstra.rst  2017-06-19-diary.rst
slides/: co-partitioned-dependency.xml  distributed-overview.xml  hspark.html  hspark.org  lineage.xml  overall.xml  process-life.xml  shuffled-dependency.xml  spark-runtime.xml
